yamls/mathoid/pod_mathoid-release-name-service-checker.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test
    helm.sh/hook-delete-policy: before-hook-creation,hook-succeeded
  name: mathoid-RELEASE-NAME-service-checker
spec:
  containers:
  - args:
    - -t
    - "5"
    - $(MATHOID_RELEASE_NAME_SERVICE_HOST)
    - http://mathoid-RELEASE-NAME:10044
    image: docker-registry.wikimedia.org/service-checker
    imagePullPolicy: IfNotPresent
    name: mathoid-RELEASE-NAME-service-checker
  dnsPolicy: ClusterFirst
  restartPolicy: Never
